# generator-tests

_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/generators/: all-00000000000000000000000000000000
_build/.aliases/default/generators/cases_post408/: all-00000000000000000000000000000000
_build/default/.dune/: configurator  configurator.v2
_build/default/generators/: gen_rules_lib.cma  gen_rules_lib.cmxa  gen_rules_lib.cmxs  gen_rules_lib.ml  html_t_rule.cma  html_t_rule.cmxa  html_t_rule.cmxs  html_t_rule.ml
_build/default/generators/.gen_rules_lib.objs/byte/: gen_rules_lib.cmi  gen_rules_lib.cmo  gen_rules_lib.cmt
_build/default/generators/.gen_rules_lib.objs/native/: gen_rules_lib.cmx
_build/default/generators/.html_t_rule.objs/byte/: html_t_rule.cmi  html_t_rule.cmo  html_t_rule.cmt
_build/default/generators/.html_t_rule.objs/native/: html_t_rule.cmx
_build/default/generators/.merlin-conf/: lib-gen_rules_lib  lib-html_t_rule
_build/default/generators/cases_post408/: link.dune.inc  link.dune.inc.gen
generators/: dune  gen_rules_lib.ml  html_t_rule.ml  latex_t_rule.ml  man_t_rule.ml
generators/cases_post408/: dune
generators/cases_post408/gen_rules/: dune  gen_rules.ml
generators/cases_post408/html/: bugs_post_406.targets  test-Bugs_post_406-class-let_open'.html  test-Bugs_post_406-class-type-let_open.html  test-Bugs_post_406.html
generators/cases_post408/latex/: bugs_post_406.targets  test.Bugs_post_406.tex
generators/cases_post408/man/: bugs_post_406.targets
(+10 files in other folders)
